240201 cafe 수정 mypage 거의 완료(create time format진행중)

--- a/src/main/resources/templates/main/pay-page.html
+++ b/src/main/resources/templates/main/pay-page.html
@@ -35,7 +35,7 @@
     }
 
     section {
-        border: 1px solid black;
+        /*border: 1px solid black;*/
         display: flex;
         justify-content: center;
         width: 40%;
@@ -184,7 +184,7 @@
                 <label><input type="text" id="addr1" class="addr" placeholder="주소" readonly></label> <br>
                 <label><input type="text" id="addr2" class="addr" placeholder="상세주소"></label>
                 <br>
-                <label>배송 요청사항 <br><textarea cols="80" rows="7" placeholder="배송요청사항"></textarea></label> <br>
+                <label>배송 요청사항 <br><textarea cols="60" rows="7" placeholder="배송요청사항"></textarea></label> <br>
 
                 <span>결제수단</span>
                 <br>
