--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -15,29 +15,38 @@
 <script>
     let myCt = document.getElementById('chart');
 
-    let myChart = new Chart(myCt, {
-        type: 'line',
-        data: {
-            labels: ['2020', '2021', '2022', '2023'], // x축 데이터
-            datasets: [ // 데이터의 속성
-                {
-                    label: 'Dataset', // 축의 제목
-                    fill: false, // line 형태일 때, 선 안쪽을 채우는지 여부
-                    data: [10,20,30,40], // dataset 값
-                    backgroundColor: '#00C7E2', // dataset 배경색
-                    borderColor: 'white', // dataset 테두리 색상
-                    borderWidth: 2, // dataset 테두리 두께
-                    maxBarThickness: 30 // 최대 bar의 두께 설정
+    let myChart;
+
+    fetch('/test2')
+        .then(resp => resp.json())
+        .then(value => {
+            if (myChart != null) {
+                myChart.destroy();
+            }
+            myChart = new Chart(myCt, {
+                type: 'line',
+                data: {
+                    labels: [value['jaeho9859'], value['tester'], '수', '목', '금', '토', '일'], // x축 데이터
+                    datasets: [ // 데이터의 속성
+                        {
+                            label: 'Dataset', // 축의 제목
+                            fill: false, // line 형태일 때, 선 안쪽을 채우는지 여부
+                            data: [10,20,30,40,50,60,70,80], // dataset 값
+                            backgroundColor: '#00C7E2', // dataset 배경색
+                            borderColor: 'white', // dataset 테두리 색상
+                            borderWidth: 2, // dataset 테두리 두께
+                            maxBarThickness: 30 // 최대 bar의 두께 설정
+                        }
+                    ]
                 }
-            ]
-        }
-    });
+            });
+        })
 
 
-    IMP.init('imp07007375')
-    const csrfToken = document.querySelector('meta[name=_csrf]').content;
+    // console.log(obj['jaeho9859'])
 
-    pre_order_request()
+
+
 
 
 
